--- a/dotnetcore/Excella.Vending.DAL/Excella.Vending.DAL.csproj
+++ b/dotnetcore/Excella.Vending.DAL/Excella.Vending.DAL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="SpecFlow.Nunit" Version="3.1.67" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
