--- a/dotnetcore/Excella.Vending.Web.UI/Excella.Vending.Web.UI.csproj
+++ b/dotnetcore/Excella.Vending.Web.UI/Excella.Vending.Web.UI.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Excella.Vending.Machine\Excella.Vending.Machine.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
